# uga-dashboard

./: .gitignore  Dockerfile  LICENSE  POC.md  README.md  env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: refresh-data.yml
data/: README.md
data/internal/: contracts.csv  publications.csv
data/marts/: authors.json  bibliometrics.json  contracts.json  manifest.json  network.json  overview.json  papers.json  reconciliation.json  sources.json  topics.json
docs/: architecture.md  data-sources.md  deployment.md  methodology.md  reconciliation.md
notebooks/: 01_eda_corpus.py  02_ingestion_api.py  03_reconciliation_qualite.py  04_topic_modeling.py  05_bibliometrie_impact.py  06_reseau_collaboration.py  07_series_temporelles_prevision.py  08_scaling_polars_duckdb.py  09_pipeline_data_contracts.py  pyproject.toml  run.py
notebooks/data/: works.parquet
notebooks/data/exports/: production_par_domaine.csv
notebooks/lib/: __init__.py  clients.py  config.py  dataset.py  seeds.py  textnorm.py  viz.py
pipeline/: build-marts.ts  config.ts  fetch-internal.ts
pipeline/analytics/: bibliometrics.ts  burst.ts  lotka.ts  network.ts  trends.ts
pipeline/connectors/: csv.ts  file.ts  hal.ts  http.ts  openalex.ts  types.ts
pipeline/marts/: builders.ts  contracts.ts  schema.ts
pipeline/transform/: normalize.ts  reconcile.ts  taxonomy.ts
public/notebooks/: 01_eda_corpus.ipynb  02_ingestion_api.ipynb  manifest.json  (+7 more)
tests/: analytics.test.ts  bibliometrics.test.ts  internal.test.ts  normalize.test.ts
(+48 files in other folders)
