[project]
name = "uga-notebooks"
version = "0.1.0"
description = "Notebooks data science / data engineering scientometriques UGA (donnees reelles HAL/OpenAlex/scanR)"
requires-python = ">=3.10"

# Dependances de base (legeres) : EDA, ingestion, agregations, viz, bibliometrie,
# reseau, series temporelles, data contracts. Couvre 8 des 9 notebooks.
dependencies = [
    "polars>=1.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "duckdb>=1.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "altair>=5.3",
    "matplotlib>=3.9",
    "networkx>=3.3",
    "python-louvain>=0.16",
    "httpx>=0.27",
    "pandera>=0.20",
    "jupytext>=1.16",
    "papermill>=2.6",
    "ipykernel>=6.29",
    "nbformat>=5.10",
]

[project.optional-dependencies]
# Groupe lourd (torch) isole : topic modeling par embeddings. Installer avec
# `uv sync --extra ml` uniquement pour executer 04_topic_modeling.
ml = [
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "hdbscan>=0.8.36",
    "bertopic>=0.16",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
package = false
